<resources>
    <string name="app_name">craftify-app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="scan_tittle">Scan</string>
    <string name="craftify">CRAFTIFY</string>
    <string name="input_email">Your email@gmail.com</string>
    <string name="input_username">Insert your username</string>
    <string name="input_password">Insert your password</string>
    <string name="register">Register</string>
    <string name="already_had_an_account_login">Already had an account? Login</string>
    <string name="username">Username</string>
    <string name="email_hint">youremail.gmail.com</string>
    <string name="password">password</string>
    <string name="enter_your_passwod">Enter your passwod</string>
    <string name="email">Email</string>
    <string name="username_hint">Enter your username</string>
    <string name="explore_masterpiece">Explore Masterpiece</string>
    <string name="add_button_description">Add</string>
    <string name="blog_image_description">Blog Image</string>
    <string name="blog">Blog</string>
    <string name="blogdetailfragment">BlogDetailFragment</string>
    <string name="blog_details">Blog Details</string>
    <string name="blog_title">Title</string>
    <string name="user">user</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet...</string>
    <string name="date_format">YYYY/MM/DD</string>
    <string name="materials">Materials :</string>
    <string name="steps">Steps :</string>
    <string name="example_email">youremail.gmail.com</string>
    <string name="password_example">your passwod</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="back">Back</string>
    <string name="loading">Loading...</string>
    <string name="options_menu">Options Menu</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="my_blog">My Blog</string>
    <string name="delete_confirmation">Are you sure you want to delete this blog?</string>
    <string name="cancel">Cancel</string>
    <string name="not_found">Not Found</string>
    <string name="add_blog">Add Blog</string>
    <string name="save">Save</string>
    <string name="blog_content">Enter your content here . . .</string>
    <string name="upload_header_image">Upload</string>
    <string name="add_edit_blog">Add Or Edit</string>
    <string name="edit_blog">Edit Blog</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="capture_image">Capture Image</string>
    <string name="dark_mode">Dark Mode</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="account_information">Account Information</string>
    <string name="about_app">About App</string>
    <string name="terms">Terms</string>
    <string name="About_Content">Our team is dedicated to creating a tool that makes a meaningful impact on sustainability and empowers children to take small but meaningful actions for the planet while encouraging them to develop creativity.</string>
    <string name="profile_picture">profile picture</string>
    <string name="favorite">favorite</string>
</resources>