<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.craftify.craftify_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.craftify.craftify_app.ui.scan.ScanFragment"
        android:label="@string/scan_tittle"
        tools:layout="@layout/fragment_scan" >
        <action
            android:id="@+id/action_to_fragmentReuslt"
            app:destination="@id/fragment_result" />

    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.craftify.craftify_app.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.craftify.craftify_app.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/fragment_result"
        android:name="com.craftify.craftify_app.ui.result.ResultFragment"
        android:label="Result"
        tools:layout="@layout/fragment_result" />

</navigation>