<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_clear_less_rounded"
        android:drawableLeft="@drawable/baseline_arrow_back_ios_24"
        android:text="@string/back"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:backgroundTint="@null"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blog_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/lightgreen"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/poppinssemibold"
        android:textColor="@color/darkgreen"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivHeaderImage"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_logo"
        android:contentDescription="@string/blog_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAuthor"
        app:shapeAppearance="@style/CustomImageShape"
        />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_format"
        android:textSize="12sp"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/green"
        app:layout_constraintTop_toBottomOf="@id/ivHeaderImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_dolor_sit_amet"
            android:textSize="14sp"
            android:lineSpacingExtra="4dp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/cardview_dark_background" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
