<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.craftify.craftify_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
            <action
                android:id="@+id/action_to_fragmentCraftDetail"
                app:destination="@id/fragment_craft_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.craftify.craftify_app.ui.scan.ScanFragment"
        android:label="@string/scan_tittle"
        tools:layout="@layout/fragment_scan" >
        <action
            android:id="@+id/action_to_fragmentReuslt"
            app:destination="@id/fragment_result" />
    </fragment>

    <fragment
        android:id="@+id/navigation_blog"
        android:name="com.craftify.craftify_app.ui.blog.BlogFragment"
        android:label="@string/blog"
        tools:layout="@layout/fragment_blog">
        <action
            android:id="@+id/action_navigation_blog_to_blogDetailsFragment"
            app:destination="@id/blogDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.craftify.craftify_app.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/fragment_result"
        android:name="com.craftify.craftify_app.ui.result.ResultFragment"
        android:label="Result"
        tools:layout="@layout/fragment_result">

        <action
            android:id="@+id/action_to_fragmentCraftDetail"
            app:destination="@id/fragment_craft_detail" />

        <action
            android:id="@+id/back_to_fragmentScan"
            app:destination="@id/navigation_scan" />
    </fragment>

    <fragment
        android:id="@+id/fragment_craft_detail"
        android:name="com.craftify.craftify_app.ui.craft.DetailCraftFragment"
        android:label="Detail"
        tools:layout="@layout/fragment_detail_craft"/>
</navigation>