<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/gray_light">

            <ImageView
                android:id="@+id/ivHeaderImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/blog_image_description"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/btnMenu"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="9dp"
                android:backgroundTint="@color/green"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/options_menu"
                android:layout_gravity="end"
                android:src="@drawable/ic_more_vert" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgreen"
            android:padding="12dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/white"
                android:text="@string/title" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="14sp"
                android:layout_below="@id/tvTitle"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppinsregular"
                android:textColor="@color/darkgreen" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
