<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:elevation="4dp"
    android:layout_marginVertical="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="270dp">

            <ImageView
                android:id="@+id/ivHeaderImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/blog_image_description"
                android:scaleType="centerCrop" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgreen"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/white"
                android:text="@string/title" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="16sp"
                android:layout_below="@id/tvTitle"
                android:textStyle="bold"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/darkgreen" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
